@@ -1,5 +1,6 @@
 2022-01-04
   updated log4j to avoid zero day exploit
+  updated dog and rat: new assemblies ROS_Cfam_1.0 and mRatBN7.2
 
 2021-08-31
   gff3 transcript loader: improved parsing nad loading code
